메가박스 클론코딩

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 </head>
 <body>
     <h1 class="blind">메가박스</h1>
+    <div class="광고">
+        <img src="images/h-direct.jpg" alt="현대해상 다이렉트">
+    </div>
 </body>
 </html>
-<!--    4-1. 깃 사용하겠다                                       :      git init
-        4-2. 새 파일 README.md 생성후 깃 상태 확인 :      git status
-        4-3. 깃으로 이 파일 추적 관리 할게!                :      git add README.md  (모든 파일,폴더    git add .)
-        4-4. 코드를 추가,수정,삭제===>업데이트 후    :      git status, git add 반복
-        4-5. 커밋 메시지(로컬->서버 업로드 직전)       :      git commit -m "무슨무슨 작업이라고 간략하게 표기"
-        4-6. (커밋이 된 후)  서버 업로드                    :      git push -u origin master -->
+<!--:      git init
+    :      git status
+    :      git add README.md  (모든 파일,폴더    git add .)
+    :      git status, git add 반복
+    :      git commit -m "무슨무슨 작업이라고 간략하게 표기"
+    :      git push -u origin master -->
