무슨무슨 작업이라고 간략하게 표기

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>메가박스(클론)</title>
+    <title>메가박스 클론코딩</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro&family=Noto+Sans+KR&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="script/jquery-3.6.0.js"></script>
 </head>
 <body>
     <h1 class="blind">메가박스</h1>
@@ -31,7 +31,7 @@
                         <li><a href="#">멤버쉽</a></li>
                         <li><a href="#">고객센터</a></li>
                     </ul>
-                    <ul>
+                    <ul class="icon-left">
                         <li><a href="#"><img src="images/ico-sitemap-white.png" alt="메뉴"></a></li>
                         <li><a href="#"><img src="images/ico-search-white.png" alt="검색"></a></li>
                     </ul>
