무슨무슨 작업이라고 간략하게 표기

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </div>
     </header>
-    <section>
+    <section id="main">
         <h2 class="blind">메가박스 박스오피스</h2>
         <article>
             <hgroup>
@@ -211,6 +211,29 @@
                         </div>
                     </li>
                 </ol>
+                <div id="search_extra">
+                    <div id="search">
+                        <form onsubmit="return false">
+                            <fieldset>
+                                <legend class="blind">영화검색</legend>
+                                <input type="text" maxlength="20" placeholder="영화명을 입력해 주세요">
+                                <input type="image" src="images/ico-search-white.png" alt="검색">
+                            </fieldset>
+                        </form>
+                    </div>
+                    <div>
+                        <a href="#"><img src="images/ico-schedule-main.png" alt="상영시간표">상영시간표</a>
+                    </div>
+                    <div>
+                        <a href="#"><img src="images/ico-boxoffice-main.png" alt="박스오피스">박스오피스</a>
+                    </div>
+                    <div>
+                        <a href="#"><img src="images/ico-quick-reserve-main.png" alt="빠른예매">빠른예매</a>
+                    </div>
+                </div>
+                <div id="mouse">
+                    <img src="images/ico-mouse.png" alt="마우스 스크롤">
+                </div>
             </div>
         </article>
     </section>
