--- a/index.html
+++ b/index.html
@@ -325,18 +325,20 @@
         </article>
         <article>
             <div class="curation-wrap">
-                <h3>큐레이션 <span id="benefit">큐레이션 더보기&plus;</span></h3>
+                <h3>큐레이션 <span id="more">큐레이션 더보기&plus;</span></h3>
                 <div id="curation">
                     <div class="art">
                         <div class="curation-badge">
                             <img src="images/badge-curation.png" alt="큐레이션">
                         </div>
-                        <figure>
+                        <figure id="frame">
                             <img src="images/rigoletto.jpg" alt="리골레토">
                             <figcaption class="blind">리골레토</figcaption>
                         </figure>
-                        <button onclick="alert('서비스 점검중입니다');">상세정보</button>
-                        <button id="ticketing">예매</button>
+                        <div class="curation-btns">
+                            <button id="detail" onclick="alert('서비스 점검중입니다');">상세정보</button>
+                            <button id="ticketing">예매</button>
+                        </div>
                     </div>
                     <div class="info">
                         <h2>#클래식 소사이어티</h2>
@@ -358,27 +360,31 @@
                                     <img src="images/film1.jpg" alt="좋은사람">
                                     <figcaption>좋은사람</figcaption>
                                 </figure>
+                                <p>좋은사람</p>
                             </li>
                             <li>
                                 <div class="badge-film"><img src="images/badge-film.png" alt="film"></div>
                                 <figure>
                                     <img src="images/film2.jpg" alt="좋은사람">
-                                    <figcaption>좋은사람</figcaption>
+                                    <figcaption>코다(CODA)</figcaption>
                                 </figure>
+                                <p>코다(CODA)</p>
                             </li>
                             <li>
                                 <div class="badge-film"><img src="images/badge-film.png" alt="film"></div>
                                 <figure>
                                     <img src="images/film3.jpg" alt="좋은사람">
-                                    <figcaption>좋은사람</figcaption>
+                                    <figcaption>토베얀손</figcaption>
                                 </figure>
+                                <p>토베얀손</p>
                             </li>
                             <li>
                                 <div class="badge-film"><img src="images/badge-film.png" alt="film"></div>
                                 <figure>
-                                    <img src="images/film4.jpg" alt="좋은사람">
-                                    <figcaption>좋은사람</figcaption>
+                                    <img src="images/film4.jpg" alt="마담 버터플라이">
+                                    <figcaption>마담 버터플라이</figcaption>
                                 </figure>
+                                <p>마담 버터플라이</p>
                             </li>
                         </ul>
                     </div>
