무슨무슨 작업이라고 간략하게 표기

--- a/index.html
+++ b/index.html
@@ -392,6 +392,92 @@
             </div>
         </article>
     </section>
+    <section id="sub">
+        <h2 class="blind">메가박스 안내 및 서비스</h2>
+        <article>
+            <div class="facility-wrap">
+                <h3>메가박스 안내</h3>
+                <ul class="facility">
+                    <li>
+                        <p>dolby cinema</p>
+                    </li>
+                    <li>
+                        <p>private beutique</p>
+                    </li>
+                    <li>
+                        <p>the beutique</p>
+                    </li>
+                    <li>
+                        <p>multiplex</p>
+                    </li>
+                    <li>
+                        <p>comfort</p>
+                    </li>
+                    <li>
+                        <p>kids</p>
+                    </li>
+                </ul>
+            </div>
+        </article>
+        <article>
+            <div class="board">
+                <div class="board-wrap">
+                    <h3>공지사항</h3>
+                    <dl>
+                        <dt>메가박스</dt>
+                        <dd>
+                            <div class="notice">
+                                <p id="title"><a href="#"><span>[공지]</span>&lt;가을 아침, 영화 한잔&gt;이벤트 일부 영화 적용 불가 안내</a></p>
+                                <p id="date">2021.09.14</p>
+                                <p id="move">더보기</p>
+                            </div>
+                        </dd>
+                    </dl>
+                </div>
+            </div>
+        </article>
+        <article>
+            <h3 class="blind">아이콘 메뉴</h3>
+            <ul>
+                <li>
+                    <figure>
+                        <img src="images/ico-main-customer.png" alt="고객센터">
+                        <figcaption>고객센터</figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/ico-main-faq.png" alt="자주묻는질문">
+                        <figcaption>자주묻는질문</figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/ico-main-customer.png" alt="1:1문의">
+                        <figcaption>1:1문의</figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/ico-main-customer.png" alt="대관문의">
+                        <figcaption>대관문의</figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/ico-main-customer.png" alt="분실문 문의/접수">
+                        <figcaption>분실문 문의/접수</figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/ico-main-customer.png" alt="더 부티크 프라이빗 대관예매">
+                        <figcaption>더 부티크 프라이빗 대관예매</figcaption>
+                    </figure>
+                </li>
+            </ul>
+        </article>
+    </section>
     <script src="script/main.js"></script>
 </body>
 </html>
