무슨무슨 작업이라고 간략하게 표기

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
         </article>
         <article>
             <h3 class="blind">아이콘 메뉴</h3>
-            <ul>
+            <ul class="icons">
                 <li>
                     <figure>
                         <img src="images/ico-main-customer.png" alt="고객센터">
@@ -453,31 +453,77 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="images/ico-main-customer.png" alt="1:1문의">
+                        <img src="images/ico-main-qna.png" alt="1:1문의">
                         <figcaption>1:1문의</figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure>
-                        <img src="images/ico-main-customer.png" alt="대관문의">
+                        <img src="images/ico-main-group.png" alt="대관문의">
                         <figcaption>대관문의</figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure>
-                        <img src="images/ico-main-customer.png" alt="분실문 문의/접수">
+                        <img src="images/ico-main-lost.png" alt="분실문 문의/접수">
                         <figcaption>분실문 문의/접수</figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure>
-                        <img src="images/ico-main-customer.png" alt="더 부티크 프라이빗 대관예매">
-                        <figcaption>더 부티크 프라이빗 대관예매</figcaption>
+                        <img src="images/ico-main-boutique.png" alt="더 부티크 프라이빗 대관예매">
+                        <figcaption>더 부티크 프라이빗<br>대관예매</figcaption>
                     </figure>
                 </li>
             </ul>
         </article>
     </section>
+    <aside>
+        <div class="banner">
+            <div class="banner-wrap">
+                <a href="#">
+                    <img src="images/released-movie.jpg" alt="할인이벤트">
+                </a>
+            </div>
+        </div>
+    </aside>
+    <footer>
+        <div class="footer-wrap">
+            <div class="bnb-cinema">
+                <nav>
+                    <ul id="bnb">
+                        <li><a href="#">회사소개</a></li>
+                        <li><a href="#">인재채용</a></li>
+                        <li><a href="#">사회공헌</a></li>
+                        <li><a href="#">제휴/광고/부대사업문의</a></li>
+                        <li><a href="#">이용약관</a></li>
+                        <li><a href="#">개인정보처리방침</a></li>
+                        <li><a href="#">윤리경영</a></li>
+                    </ul>
+                </nav>
+                <button id="cinema">극장찾기</button>
+            </div>
+            <div class="site-info">
+                <div class="footer-logo">
+                    <a href="#">
+                        <img src="images/logo2.png" alt="메가박스">
+                    </a>
+                </div>
+                <address>
+                    <p>서울특별시 마포구 월드컵로 240, 지상2층(성산동, 월드컵주경기장) ARS 1544-0070</p>
+                    <p>대표자명 김진선 · 개인정보보호책임자 조상연 · 사업자등록번호 211-86-59478 · 통신판매업신고번호 제 833호</p>
+                    <p>COPYRIGHT © MegaboxJoongAng, Inc. All rights reserved</p>
+                </address>
+                <ul class="sns">
+                    <li><a href="#"><img src="images/ico-twitter.png" alt="트위터"></a></li>
+                    <li><a href="#"><img src="images/ico-facebook.png" alt="페이스북"></a></li>
+                    <li><a href="#"><img src="images/ico-instagram.png" alt="인스타그램"></a></li>
+                    <li><a href="#"><img src="images/ico-googleplay.png" alt="구글플레이"></a></li>
+                    <li><a href="#"><img src="images/ico-appstore.png" alt="앱스토어"></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     <script src="script/main.js"></script>
 </body>
 </html>
